--- a/tests/GuiTests/RcpttProjects/RedGuiTests/rcptt.properties
+++ b/tests/GuiTests/RcpttProjects/RedGuiTests/rcptt.properties
@@ -1,9 +1,10 @@
---- RCPTT testcase ---
+--- RCPTT project settings ---
 Format-Version: 1.0
+Contexts: _gTKDoPJZEeSVXa6eJYBTJQ
 Element-Name: Project Settings
 Element-Type: projectMetadata
 Element-Version: 2.0
 Id: _a_P7cegQEeSpl9wvz3bqCQ
 Runtime-Version: 1.5.5.201503020312
-Save-Time: 4/21/15 12:23 PM
+Save-Time: 5/4/15 2:34 PM
 
