--- a/tests/GuiTests/RcpttProjects/RedGuiTests/rcptt.properties
+++ b/tests/GuiTests/RcpttProjects/RedGuiTests/rcptt.properties
@@ -1,10 +1,10 @@
 --- RCPTT project settings ---
 Format-Version: 1.0
-Contexts: _gTKDoPJZEeSVXa6eJYBTJQ,_WBkw4PPfEeSMPvaw5tnGMw
+Contexts: _gTKDoPJZEeSVXa6eJYBTJQ,_WBkw4PPfEeSMPvaw5tnGMw,_KiZXcProEeSnR8gxEs97XQ
 Element-Name: Project Settings
 Element-Type: projectMetadata
 Element-Version: 2.0
 Id: _a_P7cegQEeSpl9wvz3bqCQ
 Runtime-Version: 1.5.5.201503020312
-Save-Time: 5/6/15 2:59 PM
+Save-Time: 5/15/15 11:58 AM
 
