added GeneralPreferenes.ctx to clear RED preference tab for each test startup

--- a/tests/GuiTests/RcpttProjects/RedGuiTests/rcptt.properties
+++ b/tests/GuiTests/RcpttProjects/RedGuiTests/rcptt.properties
@@ -1,10 +1,10 @@
 --- RCPTT project settings ---
 Format-Version: 1.0
-Contexts: _cihLcf1NEeSDDK2d2rQJMQ,_gTKDoPJZEeSVXa6eJYBTJQ,_WBkw4PPfEeSMPvaw5tnGMw,_KiZXcProEeSnR8gxEs97XQ
+Contexts: _cihLcf1NEeSDDK2d2rQJMQ,_gTKDoPJZEeSVXa6eJYBTJQ,_WBkw4PPfEeSMPvaw5tnGMw,_KiZXcProEeSnR8gxEs97XQ,_jAZvAAg8EeWSUeWHLvt63g
 Element-Name: Project Settings
 Element-Type: projectMetadata
 Element-Version: 2.0
 Id: _a_P7cegQEeSpl9wvz3bqCQ
 Runtime-Version: 1.5.5.201503020312
-Save-Time: 5/18/15 1:03 PM
+Save-Time: 6/1/15 11:01 AM
 
