--- a/tests/GuiTests/RcpttProjects/RedGuiTests/rcptt.properties
+++ b/tests/GuiTests/RcpttProjects/RedGuiTests/rcptt.properties
@@ -1,10 +1,10 @@
 --- RCPTT project settings ---
 Format-Version: 1.0
-Contexts: _U7PpcA9TEeWFTuCZGHkLuQ,_QirGsA9TEeWFTuCZGHkLuQ,_QjIZsA9TEeWFTuCZGHkLuQ,_QiSFIA9TEeWFTuCZGHkLuQ,_Qh0yIA9TEeWFTuCZGHkLuQ
+Contexts: _U7PpcA9TEeWFTuCZGHkLuQ,_QirGsA9TEeWFTuCZGHkLuQ,_QjIZsA9TEeWFTuCZGHkLuQ,_QiSFIA9TEeWFTuCZGHkLuQ,_Qh0yIA9TEeWFTuCZGHkLuQ,_Mir2gA9oEeWFTuCZGHkLuQ
 Element-Name: Project Settings
 Element-Type: projectMetadata
 Element-Version: 2.0
 Id: _a_P7cegQEeSpl9wvz3bqCQ
 Runtime-Version: 1.5.3.201409120955
-Save-Time: 6/10/15 11:37 AM
+Save-Time: 6/10/15 3:34 PM
 
