--- a/tests/GuiTests/RcpttProjects/RedGuiTests/rcptt.properties
+++ b/tests/GuiTests/RcpttProjects/RedGuiTests/rcptt.properties
@@ -1,10 +1,10 @@
 --- RCPTT project settings ---
 Format-Version: 1.0
-Contexts: _U7PpcA9TEeWFTuCZGHkLuQ,_QirGsA9TEeWFTuCZGHkLuQ,_QjIZsA9TEeWFTuCZGHkLuQ,_QiSFIA9TEeWFTuCZGHkLuQ,_Mir2gA9oEeWFTuCZGHkLuQ,_Qh0yIA9TEeWFTuCZGHkLuQ
+Contexts: _Mir2gA9oEeWFTuCZGHkLuQ,_D_9CQCfwEealP8ItBfZANg,_U7PpcA9TEeWFTuCZGHkLuQ,_QirGsA9TEeWFTuCZGHkLuQ,_QjIZsA9TEeWFTuCZGHkLuQ,_QiSFIA9TEeWFTuCZGHkLuQ,_Qh0yIA9TEeWFTuCZGHkLuQ
 Element-Name: Project Settings
 Element-Type: projectMetadata
 Element-Version: 2.0
 Id: _a_P7cegQEeSpl9wvz3bqCQ
-Runtime-Version: 1.5.5.201503020312
-Save-Time: 7/2/15 4:53 PM
+Runtime-Version: 2.0.2.201511100828
+Save-Time: 6/1/16 1:58 PM
 
