--- a/src/Eclipse-IDE/org.robotframework.ide.eclipse.parent/pom.xml
+++ b/src/Eclipse-IDE/org.robotframework.ide.eclipse.parent/pom.xml
@@ -66,7 +66,7 @@
             <repositories>
                 <repository>
                     <id>eclipse-neon</id>
-                    <url>http://wrbboxv01.emea.nsn-net.net/eclipse-update/</url>
+                    <url>http://download.eclipse.org/releases/neon/ </url>
                     <layout>p2</layout>
                 </repository>
                 <repository>
@@ -87,7 +87,7 @@
             <repositories>
                 <repository>
                     <id>eclipse-oxygen</id>
-                    <url>http://wrbboxv01.emea.nsn-net.net/eclipse-update/</url>
+                    <url>http://download.eclipse.org/releases/oxygen/ </url>
                     <layout>p2</layout>
                 </repository>
                 <repository>
